fixed menu dark mode

--- a/framework/css/doutrina-framework.css
+++ b/framework/css/doutrina-framework.css
@@ -16,13 +16,15 @@
 }
 
 html {
-    background-color: transparent;
+    background-color: #fff;
+    color: #000;
     margin: 0px;
     padding: 0px;
 }
 
 body {
-    background-color: transparent;
+    background-color: #fff;
+    color: #000;
     margin: 0px;
     padding: 0px;
 }
@@ -354,6 +356,10 @@ body {
     height: 40px;
 }
 
+.h-50 {
+    height: 50px;
+}
+
 /* ----- WIDTH  ----- */
 .w-100 {
     width: 100%;
@@ -487,7 +493,10 @@ details>p>a {
     background-color: rgba(250, 250, 250, .1)
 }
 
-.dark-mode em {color: red; background-color: transparent;}
+.dark-mode em {
+    color: red;
+    background-color: transparent;
+}
 
 /* ----- HIDE SHOW  ----- */
 .hide {
@@ -509,9 +518,9 @@ details>p>a {
 
 /* ----- BACKGROUND  ----- */
 .bg-light {
-    background-color: var(--light-mode-bg)
+    background-color: var(--white) !important
 }
 
 .bg-dark {
-    background-color: var(--dark-mode-bg);
+    background-color: var(--black) !important
 }
